# agent-net

./: .env.example  .env.sample  .env.sandbox.local.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-extensions.txt
benchmark/: README.md  benchmark_dev.yaml  benchmark_evaluate.yaml  benchmark_evolve.yaml  benchmark_full.yaml  benchmark_learning.yaml  benchmark_selected.yaml  benchmark_test.csv  benchmark_test.yaml  benchmark_training.yaml  generate_benchmark.py  inject_resolve.py  tool_evolution_eval.csv  tool_evolution_stream.csv
config/: modules.yaml
docs/: README.md  agent-sandbox.md  agent-skills.md  creating-benchmark-tasks.md  custom-agents.md  gcp_vm_setup.md  learning_modules.md  memory_inputs.md  memory_module.md
docs/memory/: README.md
docs/report/: .gitignore  main.tex
report/: fig_4_data.csv  main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.ist  main.lof  main.out  main.tex  main.toc  references.bib
report/Appendix/: appendix1.tex
report/Chapter1/: chapter1.aux  chapter1.tex
report/Chapter2/: chapter2.aux  chapter2.tex
report/Chapter3/: chapter3.aux  chapter3.tex
report/Chapter4/: chapter4.aux  chapter4.tex
report/Chapter5/: chapter5.aux  chapter5.tex
report/Chapter6/: chapter6.aux  chapter6.tex
report/FrontMatter/: Abstract.tex  Abstract_vn.aux  Abstract_vn.tex  Acknowledgements.aux  Acknowledgements.tex  Acronyms.tex  Declaration.aux  Declaration.tex  Publications.tex
report/sec/: 1_gioi_thieu.tex  2_noi_dung_phuong_phap.tex  3_ket_qua.tex  4_danh_gia_hieu_qua.tex  5_ket_luan.tex
report_new/: .gitignore  README.md  main.aux  main.bbl  main.bib  main.blg  main.brf  main.out  main.tex
report_new/sec/: 1_gioi_thieu.tex  2_noi_dung_phuong_phap.tex  3_ket_qua.tex  4_danh_gia_hieu_qua.tex  5_ket_luan.tex
scratch/k8s-lab/: as1r1.startup  core_1_2.startup  lab.conf  spine_1_1.startup  worker3.startup  worker5.startup
scratch/llmd-lab/: controller.startup  worker5.startup
src/agent/: README.md  __init__.py  composition.py  defaults.py  learning_llm.py  module_config.py  registry.py  training_llm.py
src/nika/: config.py
src/nika.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  integration_base.py  integration_pipeline.py  test_advanced_workflows.py  test_agent_evolution.py  test_benchmark_agents.py  test_benchmark_batch.py  test_benchmark_manifests.py  test_benchmark_no_fault.py  test_benchmark_resume.py  test_bmv2_switch_down_verify.py  test_docker_images.py  test_end_host_dns_crash_verify.py  test_exec_cli.py  test_experiment_studio.py  test_extension_boundary.py  test_failure_cli.py  test_failure_injection_params.py  test_failure_params.py  test_host_misconfig_verify.py  test_hybrid_memory.py  test_integration_agents.py  test_kathara_cleanup.py  test_kubernetes_labs.py  test_langgraph_workflows.py  test_link_failure_verify.py  test_localization_eval.py  test_misconfig_verify.py  test_module_config.py  test_multi_verify.py  test_net_env_stop.py  test_network_attack_verify.py  test_node_error_verify.py  test_parallel_sessions.py  test_pipeline.py  test_policy_scorer.py  test_procedural_memory.py  test_procedural_memory_part1.py  test_procedural_memory_part2.py  test_procedural_memory_part3.py  (+13 more)
tests/agent/: __init__.py  sandbox_support.py  security_probe.sh  test_agent_config.py  test_autogen.py  test_claude_cli.py  test_claude_sdk.py  test_codex_cli.py  test_codex_sdk.py  test_langgraph.py  test_mcp_agent.py  test_sade.py  test_sandbox_agents.py  test_sandbox_security.py  test_sandbox_unit.py  test_skills.py
tests/agents/: _assertions.py  test_agent_config.py  test_autogen.py  test_claude_cli.py  test_claude_sdk.py  test_codex_cli.py  test_codex_sdk.py  test_langgraph.py  test_mcp_agent.py  test_mcp_server_selection.py  test_mock.py  test_sade.py  test_skills.py
tests/api_verify/: __init__.py  helpers.py  kathara_base.py  test_containerlab_api.py  test_kathara_api.py  test_kathara_bmv2_api.py  test_kathara_dhcp_api.py  test_kathara_ospf_api.py  test_kathara_telemetry_api.py
tests/benchmark/: test_batch.py  test_inject_resolve.py  test_resume.py
tests/eval/: test_session_batch.py
tests/evaluator/: test_scoring.py
tests/failure_inject_verify/: test_benchmark_selected_verify.py  test_clab_failure_inject.py  test_end_host_dns_crash_verify.py  test_host_misconfig_verify.py  test_kathara_failure_inject.py  test_link_failure_verify.py  test_misconfig_verify.py  test_network_attack_verify.py  test_node_error_verify.py  test_resource_contention_verify.py
tests/integration/: pipeline_case.py  test_pingmesh.py  test_pipeline.py  test_pipeline_clab.py  test_pipeline_kathara.py
tests/net_env_verify/: helpers.py  test_clab_min3clos_verify.py  test_clab_min5clos_verify.py  test_k8s_lab_verify.py  (+5 more)
(+607 files in other folders)
