[build-system]
requires = ["setuptools>=61,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "nika"
version = "1.0.0"
description = ""
authors = [{ name = "Zhihao Wang", email = "zhihaowang9802@gmail.com" }, 
           { name = "Alessandro Cornacchia", email = "alessandro.cornacchia@kaust.edu.sa" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "openai",
    "instructor",
    "kathara",
    "langfuse",
    "python-dotenv",
    "langchain-deepseek",
    "langgraph",
    "mcp[cli]",
    "langchain-mcp-adapters",
    "langchain-ollama",
    "langchain",
    "typer>=0.25.1",
    "func_timeout",
    "pyyaml",
    "mcp-agent[openai]>=0.2.6",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[mcp,openai]>=0.7.5",
]

[project.optional-dependencies]
# SADE community agent (src/agent/community/sade) drives Claude Code via the SDK.
sade = ["claude-agent-sdk"]
# SDK agents (src/agent/sdk/claude_sdk, src/agent/sdk/codex_sdk).
sdk = ["claude-agent-sdk", "openai-codex>=0.1.0b3"]

[project.scripts]
nika = "nika.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nika*", "agent*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:fs.opener",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.uv]
prerelease = "allow"

