[build-system]
requires = ["setuptools>=61,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "nika"
version = "1.0.0"
description = ""
authors = [{ name = "Zhihao Wang", email = "zhihaowang9802@gmail.com" }, 
           { name = "Alessandro Cornacchia", email = "alessandro.cornacchia@kaust.edu.sa" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11,<2.14",
    "openai",
    "instructor",
    "kathara",
    "langfuse",
    "python-dotenv",
    "langchain-deepseek",
    "langgraph",
    "mcp[cli]==1.28.0",
    "langchain-mcp-adapters",
    "langchain-ollama",
    "langchain",
    "typer>=0.25.1",
    "func_timeout",
    "pyyaml",
    "mcp-agent[openai]>=0.2.6",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[mcp,openai]>=0.7.5",
    "ruff>=0.15.20",
]

[project.optional-dependencies]
# SADE community agent (src/agent/community/sade) drives Claude Code via the SDK.
sade = ["claude-agent-sdk"]
# SDK agents (src/agent/sdk/claude_sdk, src/agent/sdk/codex_sdk).
sdk = ["claude-agent-sdk", "openai-codex>=0.1.0b3"]

[project.scripts]
nika = "nika.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nika*", "agent*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:fs.opener",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.uv]
prerelease = "allow"

[tool.ruff.lint.per-file-ignores]
# Barefoot Networks P4 runtime Thrift client (vendor code).
"src/nika/net_env/kathara/utils/p4/thrift_API.py" = ["E712", "E721", "E722", "E741", "F403", "F405", "F841"]

