[build-system]
requires = ["setuptools>=61,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "nika"
version = "1.0.0"
description = "Network troubleshooting benchmark with adaptive agent workflows"
authors = [{ name = "Zhihao Wang", email = "zhihaowang9802@gmail.com" }, 
           { name = "Alessandro Cornacchia", email = "alessandro.cornacchia@kaust.edu.sa" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.11,<2.14",
    "kathara",
    "python-dotenv",
    "requests>=2.32",
    "langchain-deepseek",
    "langchain-openai",
    "langgraph",
    "mcp[cli]==1.28.0",
    "langchain-mcp-adapters",
    "langchain-ollama",
    "langchain",
    "typer>=0.25.1",
    "func_timeout",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.20",
]

[project.optional-dependencies]
# Streamlit-based experiment and result dashboards.
studio = ["streamlit>=1.40"]
# Optional Langfuse tracing for byo.langgraph.
observability = ["langfuse"]

[project.scripts]
nika = "nika.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nika*", "agent*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:fs.opener",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.uv]
prerelease = "allow"

[tool.ruff.lint.per-file-ignores]
# Barefoot Networks P4 runtime Thrift client (vendor code).
"src/nika/net_env/kathara/utils/p4/thrift_API.py" = ["E712", "E721", "E722", "E741", "F403", "F405", "F841"]
